# OSS_TeamProject

./: .gitignore  2048.c  2048.h  Brickbreaker.c  CMakeCache.txt  CMakeLists.txt  Makefile  Minesweeper.c  OSS_TeamProject.sln  OSS_TeamProject_executable  README.md  Tetris.c  cmake_install.cmake  main.c
2048/: 2048.c
BrickBreaker/: Brickbreaker.c  Brickbreaker.h
MineSweeper/: Minesweeper.c  Minesweeper.h
OSS_TeamProject/: 2048.c  BP.c  OSS_TeamProject.vcxproj  OSS_TeamProject.vcxproj.filters  ScoreBoard.c  Tetris.c  games.h  login.c  main.c  mine.c  multi.c  setting.c  sign_up.c  signup.c
OSS_TeamProject/OSS_TeamProject/Debug/: vc143.idb
OSS_TeamProject/OSS_TeamProject/Debug/OSS_TeamProject.tlog/: OSS_TeamProject.lastbuildstate
Tetris/: Tetris.c  Tetris.h
backend/: db.js  index.js  package-lock.json  package.json  websocket.js
backend/route/: auth.js  game.js
